--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - جدول زمني تفاعلي لـ ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - خط زمني تفاعلي لمحادثات الذكاء الاصطناعي، نسخ LaTeX سهل"
   },
   "extDescription": {
-    "message": "حوّل محادثاتك مع الذكاء الاصطناعي إلى خطوط زمنية تفاعلية. 🚀 معاينة سريعة والانتقال، 📌 وضع علامة على الحوارات الرئيسية، ⭐️ المفضلة للدردشات المهمة، ❤️ نسخ صيغ LaTeX، ضاعف كفاءتك!"
+    "message": "حوّل محادثاتك مع الذكاء الاصطناعي إلى خطوط زمنية تفاعلية. 🚀معاينة سريعة والانتقال، 📌وضع علامة على عقد المحادثة، ⭐️وضع علامة على صفحات الدردشة، ❤️نسخ صيغ LaTeX، ضاعف كفاءتك!"
   },
   "viewStarred": {
     "message": "عرض المفضلة"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "تم النسخ"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "إضافة المحادثة إلى المفضلة"
+    "message": "وضع علامة على صفحة الدردشة"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "لا يمكن أن يكون المحتوى فارغًا"
   },
   "dataStorageNote": {
-    "message": "يتم تخزين جميع البيانات محليًا في متصفحك فقط. لن نقوم مطلقًا بتحميل أي بيانات دردشة إلى الخوادم دون إذنك"
+    "message": "جميع البيانات مخزنة محليًا"
   },
   "projectOpenSource": {
-    "message": "هذا المشروع مفتوح المصدر، مرحبًا بك في"
+    "message": "مفتوح المصدر، مرحبًا بك"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "أعجبك؟ شاركه مع الأصدقاء!"
+    "message": "مشاركة مع الأصدقاء"
   },
   "chromeWebStore": {
-    "message": "متجر كروم الإلكتروني"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "نسخ معادلة LaTeX"
   },
   "latexFormulaCopied": {
     "message": "تم النسخ بنجاح"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
