--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktiv tidslinje til ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Interaktiv tidslinje for AI-samtaler, nem LaTeX-kopiering"
   },
   "extDescription": {
-    "message": "Transformer dine AI-samtaler til interaktive tidslinjer. 🚀 Hurtig forhåndsvisning og navigation, 📌 markér nøgledialoger, ⭐️ favoritter vigtige chats, ❤️ kopiér LaTeX-formler, fordobl din effektivitet!"
+    "message": "Omdanner dine AI-samtaler til interaktive tidslinjer. 🚀Hurtig forhåndsvisning og navigation, 📌Marker samtaleknuder, ⭐️Marker chatsider, ❤️Kopier LaTeX-formler, fordoble din effektivitet!"
   },
   "viewStarred": {
     "message": "Vis favoritter"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Kopieret"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Markér samtale som favorit"
+    "message": "Marker chatside"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Indhold må ikke være tomt"
   },
   "dataStorageNote": {
-    "message": "Alle data gemmes kun lokalt i din browser. Vi vil aldrig uploade chatdata til servere uden din tilladelse"
+    "message": "Alle data gemt lokalt"
   },
   "projectOpenSource": {
-    "message": "Dette projekt er open source, velkommen til"
+    "message": "Open source, velkommen"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Kan du lide det? Del med venner!"
+    "message": "Del med venner"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Kopier LaTeX-formel"
   },
   "latexFormulaCopied": {
     "message": "Kopieret"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
