--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktive Zeitleiste für ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Interaktive Zeitleiste für KI-Gespräche, einfaches LaTeX-Kopieren"
   },
   "extDescription": {
-    "message": "Verwandeln Sie Ihre KI-Gespräche in interaktive Zeitleisten. 🚀 Schnelle Vorschau und Navigation, 📌 wichtige Dialoge markieren, ⭐️ wichtige Chats favorisieren, ❤️ LaTeX-Formeln kopieren, verdoppeln Sie Ihre Effizienz!"
+    "message": "Verwandeln Sie Ihre KI-Gespräche in interaktive Zeitleisten. 🚀Schnelle Vorschau und Navigation, 📌Gesprächsknoten markieren, ⭐️Chat-Seiten markieren, ❤️LaTeX-Formeln kopieren, verdoppeln Sie Ihre Effizienz!"
   },
   "viewStarred": {
     "message": "Favoriten anzeigen"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Kopiert"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Gespräch markieren"
+    "message": "Chat-Seite markieren"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Inhalt darf nicht leer sein"
   },
   "dataStorageNote": {
-    "message": "Alle Daten werden nur lokal in Ihrem Browser gespeichert. Wir werden ohne Ihre Erlaubnis niemals Chat-Daten auf Server hochladen"
+    "message": "Alle Daten lokal gespeichert"
   },
   "projectOpenSource": {
-    "message": "Dieses Projekt ist Open Source, willkommen zu"
+    "message": "Open Source, willkommen"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Gefällt es Ihnen? Mit Freunden teilen!"
+    "message": "Mit Freunden teilen"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "LaTeX-Formel kopieren"
   },
   "latexFormulaCopied": {
     "message": "Erfolgreich kopiert"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
