--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Διαδραστικό χρονολόγιο για ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Διαδραστικό χρονοδιάγραμμα για συνομιλίες AI, εύκολη αντιγραφή LaTeX"
   },
   "extDescription": {
-    "message": "Μετατρέψτε τις συνομιλίες σας με AI σε διαδραστικά χρονολόγια. 🚀 Γρήγορη προεπισκόπηση και πλοήγηση, 📌 επισήμανση κύριων διαλόγων, ⭐️ αγαπημένες σημαντικές συνομιλίες, ❤️ αντιγραφή τύπων LaTeX, διπλασιάστε την αποδοτικότητά σας!"
+    "message": "Μετατρέψτε τις συνομιλίες AI σας σε διαδραστικά χρονοδιαγράμματα. 🚀Γρήγορη προεπισκόπηση και πλοήγηση, 📌Σημειώστε κόμβους συνομιλίας, ⭐️Σημειώστε σελίδες συνομιλίας, ❤️Αντιγράψτε τύπους LaTeX, διπλασιάστε την αποδοτικότητά σας!"
   },
   "viewStarred": {
     "message": "Προβολή αγαπημένων"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Αντιγράφηκε"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Προσθήκη συνομιλίας στα αγαπημένα"
+    "message": "Σημείωση σελίδας συνομιλίας"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Το περιεχόμενο δεν μπορεί να είναι κενό"
   },
   "dataStorageNote": {
-    "message": "Όλα τα δεδομένα αποθηκεύονται μόνο τοπικά στο πρόγραμμα περιήγησής σας. Δεν θα ανεβάσουμε ποτέ δεδομένα συνομιλίας σε διακομιστές χωρίς την άδειά σας"
+    "message": "Όλα τα δεδομένα αποθηκεύονται τοπικά"
   },
   "projectOpenSource": {
-    "message": "Αυτό το έργο είναι ανοιχτού κώδικα, καλώς ήρθατε"
+    "message": "Ανοιχτός κώδικας, καλώς ήρθατε"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Σας αρέσει; Μοιραστείτε το με φίλους!"
+    "message": "Κοινοποίηση σε φίλους"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Αντιγραφή τύπου LaTeX"
   },
   "latexFormulaCopied": {
     "message": "Αντιγράφηκε επιτυχώς"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
