--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Línea de tiempo interactiva para ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Línea de tiempo interactiva para conversaciones de IA, copia fácil de LaTeX"
   },
   "extDescription": {
-    "message": "Transforma tus conversaciones de IA en líneas de tiempo interactivas. 🚀 Vista previa rápida y salto, 📌 marca diálogos clave, ⭐️ favoritos de chats importantes, ❤️ copia fórmulas LaTeX, ¡duplica tu eficiencia!"
+    "message": "Transforma tus conversaciones de IA en líneas de tiempo interactivas. 🚀Vista previa rápida y saltos, 📌Marca nodos de conversación, ⭐️Marca páginas de chat, ❤️Copia fórmulas LaTeX, ¡duplica tu eficiencia!"
   },
   "viewStarred": {
     "message": "Ver favoritos"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Copiado"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Marcar conversación como favorita"
+    "message": "Marcar página de chat"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "El contenido no puede estar vacío"
   },
   "dataStorageNote": {
-    "message": "Todos los datos se almacenan únicamente en su navegador localmente. Nunca subiremos ningún dato de chat a servidores sin su permiso"
+    "message": "Todos los datos almacenados localmente"
   },
   "projectOpenSource": {
-    "message": "Este proyecto es de código abierto, bienvenido a"
+    "message": "Código abierto, bienvenido"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "¿Te gusta? ¡Compártelo con amigos!"
+    "message": "Compartir con amigos"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Copiar fórmula LaTeX"
   },
   "latexFormulaCopied": {
     "message": "Copiado exitosamente"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
