--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktiivinen aikajana ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Interaktiivinen aikajana AI-keskusteluille, helppo LaTeX-kopiointi"
   },
   "extDescription": {
-    "message": "Muunna AI-keskustelusi interaktiivisiksi aikajanoisiksi. 🚀 Nopea esikatselu ja navigointi, 📌 merkitse avaindialogia, ⭐️ suosikki tärkeät keskustelut, ❤️ kopioi LaTeX-kaavoja, kaksinkertaista tehokkuutesi!"
+    "message": "Muunna AI-keskustelusi interaktiivisiksi aikajanoi ksi. 🚀Nopea esikatselu ja navigointi, 📌Merkitse keskustelusolmut, ⭐️Merkitse chattisivut, ❤️Kopioi LaTeX-kaavoja, kaksinkertaista tehokkuutesi!"
   },
   "viewStarred": {
     "message": "Näytä suosikit"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Kopioitu"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Lisää keskustelu suosikkeihin"
+    "message": "Merkitse chattisivu"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Sisältö ei voi olla tyhjä"
   },
   "dataStorageNote": {
-    "message": "Kaikki tiedot tallennetaan vain paikallisesti selaimeesi. Emme koskaan lataa chat-tietoja palvelimille ilman lupaasi"
+    "message": "Kaikki tiedot tallennettu paikallisesti"
   },
   "projectOpenSource": {
-    "message": "Tämä projekti on avoimen lähdekoodin, tervetuloa"
+    "message": "Avoimen lähdekoodin, tervetuloa"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Pidätkö siitä? Jaa ystävillesi!"
+    "message": "Jaa ystävien kanssa"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Kopioi LaTeX-kaava"
   },
   "latexFormulaCopied": {
     "message": "Kopioitu onnistuneesti"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
