--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interactive na timeline para sa ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Interactive timeline para sa mga pag-uusap sa AI, madaling pagkopya ng LaTeX"
   },
   "extDescription": {
-    "message": "I-transform ang iyong AI conversations sa interactive timelines. 🚀 Mabilis na preview at jump, 📌 markahan ang mga pangunahing dialogue, ⭐️ paborito ang mahahalagang chat, ❤️ kopyahin ang LaTeX formulas, doblehin ang iyong efficiency!"
+    "message": "I-transform ang iyong mga pag-uusap sa AI sa interactive timelines. 🚀Mabilis na preview at navigation, 📌Markahan ang mga node ng pag-uusap, ⭐️Markahan ang mga pahina ng chat, ❤️Kopyahin ang mga formula ng LaTeX, i-doble ang iyong kahusayan!"
   },
   "viewStarred": {
     "message": "Tingnan ang mga paborito"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Nakopya"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "I-star ang pag-uusap"
+    "message": "Markahan ang pahina ng chat"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Ang nilalaman ay hindi maaaring walang laman"
   },
   "dataStorageNote": {
-    "message": "Ang lahat ng data ay naka-imbak lamang sa iyong browser nang lokal. Hindi namin kailanman ia-upload ang anumang data ng chat sa mga server nang walang iyong pahintulot"
+    "message": "Lahat ng data ay nakaimbak nang lokal"
   },
   "projectOpenSource": {
-    "message": "Ang proyektong ito ay open source, maligayang pagdating sa"
+    "message": "Open source, maligayang pagdating"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Nagustuhan mo? Ibahagi sa mga kaibigan!"
+    "message": "Ibahagi sa mga kaibigan"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Kopyahin ang LaTeX formula"
   },
   "latexFormulaCopied": {
     "message": "Matagumpay na nakopya"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
