--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktivna vremenska crta za ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Interaktivna vremenska crta za AI razgovore, jednostavno kopiranje LaTeX"
   },
   "extDescription": {
-    "message": "Pretvorite svoje AI razgovore u interaktivne vremenske linije. 🚀 Brzi pregled i navigacija, 📌 označite ključne dijaloge, ⭐️ favoriti važnih chatova, ❤️ kopirajte LaTeX formule, udvostručite svoju učinkovitost!"
+    "message": "Pretvorite svoje AI razgovore u interaktivne vremenske crte. 🚀Brzi pregled i navigacija, 📌Označite čvorove razgovora, ⭐️Označite stranice chata, ❤️Kopirajte formule LaTeX, udvostručite svoju učinkovitost!"
   },
   "viewStarred": {
     "message": "Pogledaj favorite"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Kopirano"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Dodaj razgovor u favorite"
+    "message": "Označi stranicu chata"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Sadržaj ne može biti prazan"
   },
   "dataStorageNote": {
-    "message": "Svi podaci pohranjeni su samo lokalno u vašem pregledniku. Nikada nećemo učitavati podatke razgovora na poslužitelje bez vašeg dopuštenja"
+    "message": "Svi podaci pohranjeni lokalno"
   },
   "projectOpenSource": {
-    "message": "Ovaj projekt je otvorenog koda, dobrodošli"
+    "message": "Open source, dobrodošli"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Sviđa vam se? Podijelite s prijateljima!"
+    "message": "Podijelite s prijateljima"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Kopiraj LaTeX formulu"
   },
   "latexFormulaCopied": {
     "message": "Uspješno kopirano"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
