--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktív idővonal ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Interaktív idővonal AI beszélgetésekhez, egyszerű LaTeX másolás"
   },
   "extDescription": {
-    "message": "Alakítsa át AI-beszélgetéseit interaktív idővonallá. 🚀 Gyors előnézet és navigáció, 📌 jelölje meg a kulcsfontosságú párbeszédeket, ⭐️ kedvencek fontos chatok, ❤️ másolja a LaTeX képleteket, duplázza meg hatékonyságát!"
+    "message": "Alakítsa át AI beszélgetéseit interaktív idővonallá. 🚀Gyors előnézet és navigáció, 📌Jelölje meg a beszélgetési csomópontokat, ⭐️Jelölje meg a chat oldalakat, ❤️Másoljon LaTeX képleteket, duplázza meg hatékonyságát!"
   },
   "viewStarred": {
     "message": "Kedvencek megtekintése"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Másolva"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Beszélgetés hozzáadása a kedvencekhez"
+    "message": "Chat oldal megjelölése"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "A tartalom nem lehet üres"
   },
   "dataStorageNote": {
-    "message": "Minden adat csak helyileg, a böngészőjében van tárolva. Soha nem töltünk fel chat adatokat szerverre az Ön engedélye nélkül"
+    "message": "Minden adat helyileg tárolva"
   },
   "projectOpenSource": {
-    "message": "Ez a projekt nyílt forráskódú, üdvözöljük"
+    "message": "Nyílt forráskódú, üdvözöljük"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Tetszik? Oszd meg barátaiddal!"
+    "message": "Megosztás barátokkal"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "LaTeX képlet másolása"
   },
   "latexFormulaCopied": {
     "message": "Sikeresen másolva"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
