--- a/_locales/hy/messages.json
+++ b/_locales/hy/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Ինտերակտիվ ժամանակացույց ChatGPT, Gemini, DeepSeek-ի համար"
+    "message": "AI Timeline - Ինտերակտիվ ժամանակագրություն AI զրույցների համար, հեշտ LaTeX պատճենում"
   },
   "extDescription": {
-    "message": "Վերածեք ձեր AI զրույցները ինտերակտիվ ժամանակացույցի: 🚀 Արագ նախադիտում և անցում, 📌 նշեք հիմնական երկխոսությունները, ⭐️ նախընտրյալներում ավելացրեք կարևոր զրույցները, ❤️ պատճենեք LaTeX բանաձևերը, կրկնապատկեք ձեր արդյունավետությունը!"
+    "message": "Վերածեք ձեր AI զրույցները ինտերակտիվ ժամանակագրությունների։ 🚀Արագ նախադիտում և նավիգացիա, 📌Նշեք զրույցի հանգույցները, ⭐️Նշեք չատի էջերը, ❤️Պատճենեք LaTeX բանաձևեր, կրկնապատկեք ձեր արդյունավետությունը!"
   },
   "viewStarred": {
     "message": "Դիտել ընտրանին"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Պատճենված է"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Ավելացնել զրույցը նախընտրածներին"
+    "message": "Նշել չատի էջը"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Content cannot be empty"
   },
   "dataStorageNote": {
-    "message": "Բոլոր տվյալները պահվում են միայն ձեր բրաուզերում տեղական կերպով: Մենք երբեք չենք վերբեռնի զրույցի տվյալները սերվերներ առանց ձեր թույլտվության"
+    "message": "Բոլոր տվյալները պահվում են տեղում"
   },
   "projectOpenSource": {
-    "message": "Այս նախագիծը բաց կոդով է, բարի գալուստ"
+    "message": "Բաց կոդ, բարի գալուստ"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Դուր է եկել? Կիսվեք ընկերների հետ!"
+    "message": "Կիսվեք ընկերների հետ"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Պատճենել LaTeX բանաձևը"
   },
   "latexFormulaCopied": {
     "message": "Հաջողությամբ պատճենվեց"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
