--- a/_locales/is/messages.json
+++ b/_locales/is/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Gagnvirk tímalína fyrir ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Gagnvirk tímalína fyrir AI samræður, auðveld LaTeX afritun"
   },
   "extDescription": {
-    "message": "Umbreyttu AI samræðum þínum í gagnvirkar tímalínur. 🚀 Fljót forskoðun og stökk, 📌 merkja lykilsamræður, ⭐️ uppáhalds mikilvæg spjöll, ❤️ afrita LaTeX formúlur, tvöfalda skilvirkni þína!"
+    "message": "Umbreyttu AI samræðum þínum í gagnvirkar tímalínur. 🚀Fljót forskoðun og leiðsögn, 📌Merktu samræðuhnúta, ⭐️Merktu spjallsíður, ❤️Afritaðu LaTeX formúlur, tvöfaldaðu skilvirkni þína!"
   },
   "viewStarred": {
     "message": "Skoða eftirlæti"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Afritað"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Merkja samtal sem eftirlæti"
+    "message": "Merkja spjallsíðu"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Content cannot be empty"
   },
   "dataStorageNote": {
-    "message": "Öll gögn eru geymd aðeins staðbundið í vafranum þínum. Við munum aldrei hlaða upp gögnum úr spjalli á netþjóna án leyfis þíns"
+    "message": "Öll gögn vistuð á staðnum"
   },
   "projectOpenSource": {
-    "message": "Þetta verkefni er opinn kóði, velkomin"
+    "message": "Opinn kóði, velkomin"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Líkar þér við það? Deildu með vinum!"
+    "message": "Deila með vinum"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Afrita LaTeX formúlu"
   },
   "latexFormulaCopied": {
     "message": "Afritað"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
