--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - AI対話にインタラクティブなタイムラインを追加、ChatGPT, Gemini, DeepSeek, grok対応"
+    "message": "AI Timeline - AI会話用のインタラクティブなタイムライン、簡単なLaTeXコピー"
   },
   "extDescription": {
-    "message": "AIとの会話をインタラクティブなタイムラインに整理。🚀素早くプレビュー・ジャンプ、📌重要な対話をマーク、⭐️大切なチャットをお気に入り、❤️LaTeX数式をコピー、効率が倍増！"
+    "message": "AI会話をインタラクティブなタイムラインに変換します。🚀クイックプレビューとジャンプ、📌会話ノードをマーク、⭐️チャットページをスター、❤️LaTeX数式をコピー、効率が倍増！"
   },
   "viewStarred": {
     "message": "お気に入りを表示"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "コピーしました"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "会話をスター"
+    "message": "チャットページをスター"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "コンテンツを入力してください"
   },
   "dataStorageNote": {
-    "message": "すべてのデータはブラウザのローカルにのみ保存されます。お客様の許可なく、チャットデータをサーバーにアップロードすることは一切ありません"
+    "message": "すべてのデータはブラウザにローカル保存"
   },
   "projectOpenSource": {
-    "message": "このプロジェクトはオープンソースです。"
+    "message": "オープンソース、歓迎"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "気に入ったら、ぜひ友達にシェア！"
+    "message": "友達と共有"
   },
   "chromeWebStore": {
-    "message": "Chrome ウェブストア"
+    "message": "Chrome ストア"
   },
   "copyLatexFormula": {
     "message": "LaTeX 数式をコピー"
   },
   "latexFormulaCopied": {
     "message": "コピーしました"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
