--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - ინტერაქტიული დროის ხაზი ChatGPT, Gemini, DeepSeek, grok-სთვის"
+    "message": "AI Timeline - ინტერაქტიული ვადები AI საუბრებისთვის, მარტივი LaTeX კოპირება"
   },
   "extDescription": {
-    "message": "გარდაქმენით თქვენი AI საუბრები ინტერაქტიულ დროის ხაზად. 🚀 სწრაფი გადახედვა და გადასვლა, 📌 მონიშნეთ მთავარი დიალოგები, ⭐️ ფავორიტებში დაამატეთ მნიშვნელოვანი ჩატები, ❤️ დააკოპირეთ LaTeX ფორმულები, გაორმაგეთ თქვენი ეფექტურობა!"
+    "message": "გადააქციეთ თქვენი AI საუბრები ინტერაქტიულ ვადებად. 🚀სწრაფი გადახედვა და ნავიგაცია, 📌მონიშნეთ საუბრის კვანძები, ⭐️მონიშნეთ ჩატის გვერდები, ❤️დააკოპირეთ LaTeX ფორმულები, გაახილეთ თქვენი ეფექტურობა!"
   },
   "viewStarred": {
     "message": "ფავორიტების ნახვა"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "დაკოპირებულია"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "საუბრის ფავორიტებში დამატება"
+    "message": "ჩატის გვერდის მონიშვნა"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Content cannot be empty"
   },
   "dataStorageNote": {
-    "message": "ყველა მონაცემი ინახება მხოლოდ თქვენს ბრაუზერში ლოკალურად. ჩვენ არასოდეს ავტვირთავთ ჩატის მონაცემებს სერვერებზე თქვენი ნებართვის გარეშე"
+    "message": "ყველა მონაცემი ლოკალურად ინახება"
   },
   "projectOpenSource": {
-    "message": "ეს პროექტი ღია წყაროა, კეთილი იყოს თქვენი მობრძანება"
+    "message": "ღია წყარო, კეთილი იყოს თქვენი მობრძანება"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "მოგწონთ? გაუზიარეთ მეგობრებს!"
+    "message": "გაზიარება მეგობრებთან"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "LaTeX ფორმულის კოპირება"
   },
   "latexFormulaCopied": {
     "message": "წარმატებით დაკოპირდა"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
