--- a/_locales/kk/messages.json
+++ b/_locales/kk/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek үшін интерактивті уақыт шкаласы"
+    "message": "AI Timeline - AI әңгімелері үшін интерактивті уақыт желісі, оңай LaTeX көшіру"
   },
   "extDescription": {
-    "message": "AI әңгімелерін интерактивті уақыт желісіне айналдырыңыз. 🚀 Жылдам алдын ала көру және өту, 📌 негізгі диалогтарды белгілеу, ⭐️ маңызды чаттарды таңдаулыларға қосу, ❤️ LaTeX формулаларын көшіру, тиімділігіңізді екі есе арттырыңыз!"
+    "message": "AI әңгімелеріңізді интерактивті уақыт желілеріне айналдырыңыз. 🚀Жылдам алдын ала қарау және навигация, 📌Әңгіме түйіндерін белгілеңіз, ⭐️Чат беттерін белгілеңіз, ❤️LaTeX формулаларын көшіріңіз, тиімділігіңізді екі есе арттырыңыз!"
   },
   "viewStarred": {
     "message": "Таңдаулыларды көру"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Көшірілді"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Әңгімені таңдаулыларға қосу"
+    "message": "Чат бетін белгілеу"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Content cannot be empty"
   },
   "dataStorageNote": {
-    "message": "Барлық деректер тек сіздің браузеріңізде жергілікті түрде сақталады. Біз сіздің рұқсатыңызсыз чат деректерін ешқашан серверлерге жүктемейміз"
+    "message": "Барлық деректер жергілікті сақталады"
   },
   "projectOpenSource": {
-    "message": "Бұл жоба ашық бастапқы кодты, қош келдіңіз"
+    "message": "Ашық код, қош келдіңіз"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Ұнады ма? Достарыңызбен бөлісіңіз!"
+    "message": "Достармен бөлісу"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "LaTeX формуласын көшіру"
   },
   "latexFormulaCopied": {
     "message": "Сәтті көшірілді"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
