--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktyvi laiko juosta ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Interaktyvi laiko juosta AI pokalbiam, paprasta LaTeX kopijavimas"
   },
   "extDescription": {
-    "message": "Paversti AI pokalbius interaktyviomis laiko juostomis. 🚀 Greitas peržiūra ir navigacija, 📌 pažymėti pagrindinius dialogus, ⭐️ mėgstami svarbūs pokalbiai, ❤️ kopijuoti LaTeX formules, padvigubinti efektyvumą!"
+    "message": "Paversk savo AI pokalbius interaktyvia laiko juosta. 🚀Greitas peržiūra ir navigacija, 📌Pažymėk pokalbio mazgus, ⭐️Pažymėk pokalbių puslapius, ❤️Kopijuok LaTeX formules, padvigubink savo efektyvumą!"
   },
   "viewStarred": {
     "message": "Peržiūrėti mėgstamiausius"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Nukopijuota"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Pridėti pokalbį į mėgstamus"
+    "message": "Pažymėti pokalbio puslapį"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Content cannot be empty"
   },
   "dataStorageNote": {
-    "message": "Visi duomenys saugomi tik vietoje jūsų naršyklėje. Niekada neįkelsime jokių pokalbių duomenų į serverius be jūsų leidimo"
+    "message": "Visi duomenys saugomi vietoje"
   },
   "projectOpenSource": {
-    "message": "Šis projektas yra atviro kodo, sveiki atvykę"
+    "message": "Atviras kodas, sveiki atvykę"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Patinka? Pasidalinkite su draugais!"
+    "message": "Dalintis su draugais"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Kopijuoti LaTeX formulę"
   },
   "latexFormulaCopied": {
     "message": "Sėkmingai nukopijuota"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
