--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Garis masa interaktif untuk ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Garis masa interaktif untuk perbualan AI, menyalin LaTeX dengan mudah"
   },
   "extDescription": {
-    "message": "Ubah perbualan AI anda menjadi garis masa interaktif. 🚀 Pratonton pantas dan navigasi, 📌 tandakan dialog utama, ⭐️ kegemaran sembang penting, ❤️ salin formula LaTeX, gandakan kecekapan anda!"
+    "message": "Tukar perbualan AI anda kepada garis masa interaktif. 🚀Pratonton pantas dan navigasi, 📌Tandakan nod perbualan, ⭐️Tandakan halaman sembang, ❤️Salin formula LaTeX, gandakan kecekapan anda!"
   },
   "viewStarred": {
     "message": "Lihat kegemaran"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Disalin"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Tambah perbualan ke kegemaran"
+    "message": "Tandakan halaman sembang"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Kandungan tidak boleh kosong"
   },
   "dataStorageNote": {
-    "message": "Semua data hanya disimpan secara setempat dalam pelayar anda. Kami tidak akan memuat naik sebarang data sembang ke pelayan tanpa kebenaran anda"
+    "message": "Semua data disimpan secara tempatan"
   },
   "projectOpenSource": {
-    "message": "Projek ini adalah sumber terbuka, selamat datang ke"
+    "message": "Sumber terbuka, selamat datang"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Suka? Kongsi dengan rakan!"
+    "message": "Kongsi dengan rakan"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Salin formula LaTeX"
   },
   "latexFormulaCopied": {
     "message": "Berjaya disalin"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
