--- a/_locales/my/messages.json
+++ b/_locales/my/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek, grok အတွက် အပြန်အလှန်အချိန်ဇယား"
+    "message": "AI Timeline - AI စကားဝိုင်းများအတွက် အပြန်အလှန်လုပ်ဆောင်နိုင်သော အချိန်ဇယား၊ LaTeX ကူးယူရန် လွယ်ကူ"
   },
   "extDescription": {
-    "message": "သင်၏ AI စကားပြောမှုများကို အပြန်အလှန် timeline များအဖြစ် ပြောင်းလဲပါ။ 🚀 အမြန် preview နှင့် ခုန်ရန်, 📌 အဓိက စကားပြောချက်များကို မှတ်သားပါ, ⭐️ အရေးကြီးသော စကားပြောခန်းများကို အကြိုက်ဆုံးတွင် သိမ်းပါ, ❤️ LaTeX ပုံသေနည်းများကို ကူးယူပါ, သင်၏ စွမ်းဆောင်ရည်ကို နှစ်ဆတိုးပါ!"
+    "message": "သင်၏ AI စကားဝိုင်းများကို အပြန်အလှန်လုပ်ဆောင်နိုင်သော အချိန်ဇယားများအဖြစ် ပြောင်းလဲပါ။ 🚀အမြန်အစမ်းကြည့်ခြင်း နှင့် လမ်းညွှန်ခြင်း၊ 📌စကားဝိုင်း node များကို အမှတ်အသားပြုပါ၊ ⭐️စကားပြောစာမျက်နှာများကို အမှတ်အသားပြုပါ၊ ❤️LaTeX ပုံသေနည်းများကို ကူးယူပါ၊ သင်၏ စွမ်းဆောင်ရည်ကို နှစ်ဆတိုးပါ!"
   },
   "viewStarred": {
     "message": "အကြိုက်ဆုံးများကြည့်ရန်"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "ကူးယူပြီးပါပြီ"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "စကားဝိုင်းကို အကြိုက်ဆုံးများတွင် ထည့်မည်"
+    "message": "စကားပြောစာမျက်နှာကို အမှတ်အသားပြုပါ"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Content cannot be empty"
   },
   "dataStorageNote": {
-    "message": "ဒေတာအားလုံးသည် သင့်ဘရောက်ဆာတွင်သာ local သိမ်းဆည်းထားသည်။ သင့်ခွင့်ပြုချက်မရှိဘဲ ချတ်ဒေတာများကို ဆာဗာများသို့ မည်သည့်အခါမျှ upload မလုပ်ပါ"
+    "message": "ဒေတာအားလုံး local တွင် သိမ်းဆည်းထားသည်"
   },
   "projectOpenSource": {
-    "message": "ဤပရောဂျက်သည် open source ဖြစ်သည်၊ ကြိုဆိုပါသည်"
+    "message": "Open source, ကြိုဆိုပါတယ်"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "ကြိုက်လား? သူငယ်ချင်းတွေနဲ့ မျှဝေပါ!"
+    "message": "သူငယ်ချင်းများနှင့် မျှဝေပါ"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "LaTeX ဖော်မြူလာကို ကူးယူမည်"
   },
   "latexFormulaCopied": {
     "message": "အောင်မြင်စွာ ကူးယူပြီးပါပြီ"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
