--- a/_locales/ne/messages.json
+++ b/_locales/ne/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek को लागि अन्तरक्रियात्मक समयरेखा"
+    "message": "AI Timeline - AI वार्तालापका लागि अन्तरक्रियात्मक टाइमलाइन, सजिलो LaTeX प्रतिलिपि"
   },
   "extDescription": {
-    "message": "आफ्नो AI कुराकानीलाई अन्तरक्रियात्मक टाइमलाइनमा रूपान्तरण गर्नुहोस्। 🚀 द्रुत पूर्वावलोकन र जम्प, 📌 मुख्य संवादहरू चिन्ह लगाउनुहोस्, ⭐️ महत्त्वपूर्ण च्याटहरू मनपर्नेमा राख्नुहोस्, ❤️ LaTeX सूत्रहरू प्रतिलिपि गर्नुहोस्, आफ्नो दक्षता दोब्बर बनाउनुहोस्!"
+    "message": "आफ्नो AI वार्तालापलाई अन्तरक्रियात्मक टाइमलाइनमा रूपान्तरण गर्नुहोस्। 🚀द्रुत पूर्वावलोकन र नेभिगेसन, 📌वार्तालाप नोडहरू चिन्ह लगाउनुहोस्, ⭐️च्याट पृष्ठहरू चिन्ह लगाउनुहोस्, ❤️LaTeX सूत्रहरू प्रतिलिपि गर्नुहोस्, आफ्नो दक्षता दोब्बर गर्नुहोस्!"
   },
   "viewStarred": {
     "message": "मनपर्ने हेर्नुहोस्"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "प्रतिलिपि गरियो"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "वार्तालाप मनपर्नेमा थप्नुहोस्"
+    "message": "च्याट पृष्ठ चिन्ह लगाउनुहोस्"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Content cannot be empty"
   },
   "dataStorageNote": {
-    "message": "सबै डाटा तपाईंको ब्राउजरमा मात्र स्थानीय रूपमा भण्डारण गरिएको छ। हामी तपाईंको अनुमति बिना कहिले पनि कुनै पनि च्याट डाटा सर्भरहरूमा अपलोड गर्ने छैनौं"
+    "message": "सबै डेटा स्थानीय रूपमा भण्डारण गरिएको"
   },
   "projectOpenSource": {
-    "message": "यो परियोजना खुला स्रोत हो, स्वागत छ"
+    "message": "ओपन सोर्स, स्वागत छ"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "मन पर्यो? साथीहरूसँग साझा गर्नुहोस्!"
+    "message": "साथीहरूसँग साझा गर्नुहोस्"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "LaTeX सूत्र प्रतिलिपि गर्नुहोस्"
   },
   "latexFormulaCopied": {
     "message": "सफलतापूर्वक प्रतिलिपि गरियो"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
