--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interactieve tijdlijn voor ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Interactieve tijdlijn voor AI-gesprekken, eenvoudig LaTeX kopiëren"
   },
   "extDescription": {
-    "message": "Transformeer uw AI-gesprekken in interactieve tijdlijnen. 🚀 Snel voorbeeld en navigeren, 📌 belangrijke dialogen markeren, ⭐️ favorieten van belangrijke chats, ❤️ LaTeX-formules kopiëren, verdubbel uw efficiëntie!"
+    "message": "Transformeer je AI-gesprekken in interactieve tijdlijnen. 🚀Snelle preview en navigatie, 📌Markeer gespreksknooppunten, ⭐️Markeer chatpagina's, ❤️Kopieer LaTeX-formules, verdubbel je efficiëntie!"
   },
   "viewStarred": {
     "message": "Favorieten bekijken"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Gekopieerd"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Gesprek toevoegen aan favorieten"
+    "message": "Chatpagina markeren"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Inhoud mag niet leeg zijn"
   },
   "dataStorageNote": {
-    "message": "Alle gegevens worden alleen lokaal in uw browser opgeslagen. We zullen nooit chatgegevens naar servers uploaden zonder uw toestemming"
+    "message": "Alle gegevens lokaal opgeslagen"
   },
   "projectOpenSource": {
-    "message": "Dit project is open source, welkom bij"
+    "message": "Open source, welkom"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Bevalt het? Deel met vrienden!"
+    "message": "Delen met vrienden"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "LaTeX-formule kopiëren"
   },
   "latexFormulaCopied": {
     "message": "Succesvol gekopieerd"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
