--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktiv tidslinje for ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Interaktiv tidslinje for AI-samtaler, enkel LaTeX-kopiering"
   },
   "extDescription": {
-    "message": "Forvandle AI-samtalene dine til interaktive tidslinjer. 🚀 Rask forhåndsvisning og navigering, 📌 merk nøkkeldialoger, ⭐️ favoritter viktige chatter, ❤️ kopier LaTeX-formler, doble effektiviteten din!"
+    "message": "Forvandler AI-samtalene dine til interaktive tidslinjer. 🚀Rask forhåndsvisning og navigasjon, 📌Marker samtalenoder, ⭐️Marker chattesider, ❤️Kopier LaTeX-formler, dobble effektiviteten din!"
   },
   "viewStarred": {
     "message": "Vis favoritter"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Kopiert"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Merk samtale som favoritt"
+    "message": "Marker chatteside"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Innhold kan ikke være tomt"
   },
   "dataStorageNote": {
-    "message": "Alle data lagres kun lokalt i nettleseren din. Vi vil aldri laste opp chatdata til servere uten din tillatelse"
+    "message": "All data lagret lokalt"
   },
   "projectOpenSource": {
-    "message": "Dette prosjektet er open source, velkommen til"
+    "message": "Open source, velkommen"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Liker du det? Del med venner!"
+    "message": "Del med venner"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Kopier LaTeX-formel"
   },
   "latexFormulaCopied": {
     "message": "Kopiert"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
