--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Cronologie interactivă pentru ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Cronologie interactivă pentru conversații AI, copiere ușoară LaTeX"
   },
   "extDescription": {
-    "message": "Transformați conversațiile AI în cronologii interactive. 🚀 Previzualizare rapidă și navigare, 📌 marcați dialogurile cheie, ⭐️ favorite chat-uri importante, ❤️ copiați formule LaTeX, dublați-vă eficiența!"
+    "message": "Transformați conversațiile dvs. AI în cronologii interactive. 🚀Previzualizare rapidă și navigare, 📌Marcați nodurile de conversație, ⭐️Marcați paginile de chat, ❤️Copiați formule LaTeX, dublați-vă eficiența!"
   },
   "viewStarred": {
     "message": "Vezi favoritele"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Copiat"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Adaugă conversația la favorite"
+    "message": "Marchează pagina de chat"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Conținutul nu poate fi gol"
   },
   "dataStorageNote": {
-    "message": "Toate datele sunt stocate doar local în browserul dvs. Nu vom încărca niciodată date de chat pe servere fără permisiunea dvs."
+    "message": "Toate datele stocate local"
   },
   "projectOpenSource": {
-    "message": "Acest proiect este open source, bine ați venit la"
+    "message": "Open source, bine ați venit"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Vă place? Distribuiți prietenilor!"
+    "message": "Distribuie prietenilor"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Copiază formula LaTeX"
   },
   "latexFormulaCopied": {
     "message": "Copiat cu succes"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
