--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Интерактивная временная шкала для ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Интерактивная временная шкала для разговоров с ИИ, простое копирование LaTeX"
   },
   "extDescription": {
-    "message": "Превратите ваши разговоры с ИИ в интерактивные хронологии. 🚀 Быстрый просмотр и навигация, 📌 отметить ключевые диалоги, ⭐️ избранные важные чаты, ❤️ копировать формулы LaTeX, удвойте свою эффективность!"
+    "message": "Превратите ваши разговоры с ИИ в интерактивные временные шкалы. 🚀Быстрый просмотр и переход, 📌Отметьте узлы разговора, ⭐️Отметьте страницы чата, ❤️Копируйте формулы LaTeX, удвойте свою эффективность!"
   },
   "viewStarred": {
     "message": "Просмотр избранного"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Скопировано"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Добавить разговор в избранное"
+    "message": "Отметить страницу чата"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Содержимое не может быть пустым"
   },
   "dataStorageNote": {
-    "message": "Все данные хранятся только локально в вашем браузере. Мы никогда не будем загружать данные чата на серверы без вашего разрешения"
+    "message": "Все данные хранятся локально"
   },
   "projectOpenSource": {
-    "message": "Этот проект имеет открытый исходный код, добро пожаловать"
+    "message": "Открытый исходный код, добро пожаловать"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Понравилось? Поделитесь с друзьями!"
+    "message": "Поделиться с друзьями"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Копировать формулу LaTeX"
   },
   "latexFormulaCopied": {
     "message": "Успешно скопировано"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
