--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek සඳහා අන්තර්ක්‍රියාකාරී කාලරේඛාව"
+    "message": "AI Timeline - AI සංවාද සඳහා අන්තර්ක්‍රියාකාරී කාල රේඛාව, පහසු LaTeX පිටපත් කිරීම"
   },
   "extDescription": {
-    "message": "ඔබගේ AI සංවාද අන්තර්ක්‍රියාකාරී කාල රේඛා බවට පරිවර්තනය කරන්න. 🚀 ඉක්මන් පෙරදසුන සහ පැන යන්න, 📌 ප්‍රධාන සංවාද සලකුණු කරන්න, ⭐️ වැදගත් චැට් ප්‍රියතම, ❤️ LaTeX සූත්‍ර පිටපත් කරන්න, ඔබේ කාර්යක්ෂමතාව දෙගුණ කරන්න!"
+    "message": "ඔබගේ AI සංවාද අන්තර්ක්‍රියාකාරී කාල රේඛාවලට පරිවර්තනය කරන්න. 🚀ඉක්මන් පෙරදසුන සහ සැරිසැරීම, 📌සංවාද නෝඩ් සලකුණු කරන්න, ⭐️සාකච්ඡා පිටු සලකුණු කරන්න, ❤️LaTeX සූත්‍ර පිටපත් කරන්න, ඔබේ කාර්යක්ෂමතාව දෙගුණ කරන්න!"
   },
   "viewStarred": {
     "message": "ප්‍රියතම බලන්න"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "පිටපත් කළා"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "සංවාදය ප්‍රියතම ලෙස සලකුණු කරන්න"
+    "message": "සාකච්ඡා පිටුව සලකුණු කරන්න"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Content cannot be empty"
   },
   "dataStorageNote": {
-    "message": "සියලු දත්ත ඔබේ බ්‍රව්සරයේ පමණක් ස්ථානිකව ගබඩා කර ඇත. ඔබේ අවසරයකින් තොරව අපි කිසි විටෙකත් කතාබස් දත්ත සේවාදායකයන්ට උඩුගත නොකරමු"
+    "message": "සියලුම දත්ත දේශීයව ගබඩා කර ඇත"
   },
   "projectOpenSource": {
-    "message": "මෙම ව්‍යාපෘතිය විවෘත මූලාශ්‍රයකි, සාදරයෙන් පිළිගනිමු"
+    "message": "විවෘත මූලාශ්‍ර, සාදරයෙන් පිළිගනිමු"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "කැමතිද? මිතුරන් සමඟ බෙදාගන්න!"
+    "message": "මිතුරන් සමඟ බෙදාගන්න"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "LaTeX සූත්‍රය පිටපත් කරන්න"
   },
   "latexFormulaCopied": {
     "message": "සාර්ථකව පිටපත් කරන ලදී"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
