--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktívna časová os pre ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Interaktívna časová os pre konverzácie s AI, jednoduché kopírovanie LaTeX"
   },
   "extDescription": {
-    "message": "Premeňte svoje AI konverzácie na interaktívne časové osi. 🚀 Rýchly náhľad a navigácia, 📌 označte kľúčové dialógy, ⭐️ obľúbené dôležité chaty, ❤️ kopírujte LaTeX vzorce, zdvojnásobte svoju efektivitu!"
+    "message": "Premeňte svoje konverzácie s AI na interaktívne časové osi. 🚀Rýchly náhľad a navigácia, 📌Označte uzly konverzácie, ⭐️Označte stránky chatu, ❤️Kopírujte vzorce LaTeX, zdvojnásobte svoju efektivitu!"
   },
   "viewStarred": {
     "message": "Zobraziť obľúbené"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Skopírované"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Pridať konverzáciu do obľúbených"
+    "message": "Označiť stránku chatu"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Obsah nemôže byť prázdny"
   },
   "dataStorageNote": {
-    "message": "Všetky údaje sú uložené iba lokálne vo vašom prehliadači. Nikdy nebudeme nahrávať žiadne údaje chatu na servery bez vášho súhlasu"
+    "message": "Všetky údaje uložené lokálne"
   },
   "projectOpenSource": {
-    "message": "Tento projekt je open source, vitajte"
+    "message": "Open source, vitajte"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Páči sa vám to? Zdieľajte s priateľmi!"
+    "message": "Zdieľať s priateľmi"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Kopírovať LaTeX vzorec"
   },
   "latexFormulaCopied": {
     "message": "Úspešne skopírované"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
