--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Интерактивна временска линија за ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Interaktivna vremenska linija za AI razgovore, jednostavno kopiranje LaTeX"
   },
   "extDescription": {
-    "message": "Преобразите ваше AI разговоре у интерактивне временске линије. 🚀 Брза претпреглед и навигација, 📌 означите кључне дијалоге, ⭐️ омиљени важни четови, ❤️ копирајте LaTeX формуле, удвостручите ефикасност!"
+    "message": "Pretvorite svoje AI razgovore u interaktivne vremenske linije. 🚀Brzi pregled i navigacija, 📌Označite čvorove razgovora, ⭐️Označite stranice ćaskanja, ❤️Kopirajte formule LaTeX, udvostručite svoju efikasnost!"
   },
   "viewStarred": {
     "message": "Погледај омиљене"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Копирано"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Додај разговор у омиљене"
+    "message": "Označi stranicu ćaskanja"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Content cannot be empty"
   },
   "dataStorageNote": {
-    "message": "Сви подаци се чувају само локално у вашем прегледачу. Никада нећемо отпремати податке ћаскања на сервере без ваше дозволе"
+    "message": "Сви подаци похрањени локално"
   },
   "projectOpenSource": {
-    "message": "Овај пројекат је отвореног кода, добродошли"
+    "message": "Отворени код, добродошли"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Свиђа вам се? Поделите са пријатељима!"
+    "message": "Подели са пријатељима"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Копирај LaTeX формулу"
   },
   "latexFormulaCopied": {
     "message": "Успешно копирано"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
