--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek için etkileşimli zaman çizelgesi"
+    "message": "AI Timeline - AI konuşmaları için etkileşimli zaman çizelgesi, kolay LaTeX kopyalama"
   },
   "extDescription": {
-    "message": "AI konuşmalarınızı etkileşimli zaman çizelgelerine dönüştürün. 🚀 Hızlı önizleme ve gezinme, 📌 anahtar diyalogları işaretle, ⭐️ önemli sohbetleri favorile, ❤️ LaTeX formüllerini kopyala, verimliliğinizi ikiye katlayın!"
+    "message": "AI konuşmalarınızı etkileşimli zaman çizelgelerine dönüştürün. 🚀Hızlı önizleme ve gezinme, 📌Konuşma düğümlerini işaretleyin, ⭐️Sohbet sayfalarını işaretleyin, ❤️LaTeX formüllerini kopyalayın, verimliliğinizi ikiye katlayın!"
   },
   "viewStarred": {
     "message": "Favorileri görüntüle"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Kopyalandı"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Konuşmayı favorilere ekle"
+    "message": "Sohbet sayfasını işaretle"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "İçerik boş olamaz"
   },
   "dataStorageNote": {
-    "message": "Tüm veriler yalnızca tarayıcınızda yerel olarak saklanır. İzniniz olmadan sohbet verilerini hiçbir zaman sunuculara yüklemeyeceğiz"
+    "message": "Tüm veriler yerel olarak saklanır"
   },
   "projectOpenSource": {
-    "message": "Bu proje açık kaynaklıdır, hoş geldiniz"
+    "message": "Açık kaynak, hoş geldiniz"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Beğendiniz mi? Arkadaşlarınızla paylaşın!"
+    "message": "Arkadaşlarla paylaş"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "LaTeX formülünü kopyala"
   },
   "latexFormulaCopied": {
     "message": "Başarıyla kopyalandı"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
