--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline - Dòng thời gian tương tác cho ChatGPT, Gemini, DeepSeek, grok"
+    "message": "AI Timeline - Dòng thời gian tương tác cho các cuộc trò chuyện AI, sao chép LaTeX dễ dàng"
   },
   "extDescription": {
-    "message": "Biến các cuộc trò chuyện AI của bạn thành dòng thời gian tương tác. 🚀 Xem trước nhanh và điều hướng, 📌 đánh dấu các cuộc hội thoại chính, ⭐️ yêu thích các cuộc trò chuyện quan trọng, ❤️ sao chép công thức LaTeX, tăng hiệu quả gấp đôi!"
+    "message": "Chuyển đổi các cuộc trò chuyện AI của bạn thành dòng thời gian tương tác. 🚀Xem trước nhanh và điều hướng, 📌Đánh dấu các nút hội thoại, ⭐️Đánh dấu các trang trò chuyện, ❤️Sao chép công thức LaTeX, tăng gấp đôi hiệu suất!"
   },
   "viewStarred": {
     "message": "Xem yêu thích"
@@ -17,6 +17,9 @@
   "unstarSuccess": {
     "message": "Unstarred"
   },
+  "unstarFailed": {
+    "message": "Failed to unstar"
+  },
   "starSuccess": {
     "message": "Starred"
   },
@@ -26,8 +29,14 @@
   "copied": {
     "message": "Đã sao chép"
   },
+  "copyContent": {
+    "message": "Copy Content"
+  },
+  "copyFailed": {
+    "message": "Copy Failed"
+  },
   "starChat": {
-    "message": "Lưu cuộc trò chuyện"
+    "message": "Đánh dấu trang trò chuyện"
   },
   "unstarChat": {
     "message": "Unstar"
@@ -63,24 +72,105 @@
     "message": "Nội dung không được để trống"
   },
   "dataStorageNote": {
-    "message": "Tất cả dữ liệu chỉ được lưu trữ cục bộ trong trình duyệt của bạn. Chúng tôi sẽ không bao giờ tải bất kỳ dữ liệu trò chuyện nào lên máy chủ mà không có sự cho phép của bạn"
+    "message": "Tất cả dữ liệu lưu cục bộ"
   },
   "projectOpenSource": {
-    "message": "Dự án này là mã nguồn mở, chào mừng đến"
+    "message": "Mã nguồn mở, chào mừng"
   },
   "starOnGitHub": {
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Thích không? Chia sẻ với bạn bè!"
+    "message": "Chia sẻ với bạn bè"
   },
   "chromeWebStore": {
-    "message": "Chrome Web Store"
+    "message": "Chrome Store"
   },
   "copyLatexFormula": {
     "message": "Sao chép công thức LaTeX"
   },
   "latexFormulaCopied": {
     "message": "Sao chép thành công"
+  },
+  "createFolder": {
+    "message": "Create Folder"
+  },
+  "createSubfolder": {
+    "message": "Create Subfolder"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "defaultFolder": {
+    "message": "Default Folder"
+  },
+  "createNewFolder": {
+    "message": "Create New Folder"
+  },
+  "createSubfolderIn": {
+    "message": "Create subfolder in «{folderName}»"
+  },
+  "folderNamePlaceholder": {
+    "message": "Enter folder name"
+  },
+  "folderNameRequired": {
+    "message": "Folder name is required"
+  },
+  "editFolderName": {
+    "message": "Edit Folder Name"
+  },
+  "newNamePlaceholder": {
+    "message": "Enter new name"
+  },
+  "folderNameExists": {
+    "message": "Folder name already exists"
+  },
+  "folderCreated": {
+    "message": "Folder created successfully"
+  },
+  "folderUpdated": {
+    "message": "Folder updated successfully"
+  },
+  "editFailed": {
+    "message": "Edit failed"
+  },
+  "folderNotFound": {
+    "message": "Folder not found"
+  },
+  "folderDeleted": {
+    "message": "Folder deleted successfully"
+  },
+  "deleteFailed": {
+    "message": "Delete failed"
+  },
+  "updated": {
+    "message": "Updated"
+  },
+  "createFolderFirst": {
+    "message": "Please create a folder first"
+  },
+  "selectTargetFolder": {
+    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  },
+  "invalidSelection": {
+    "message": "Invalid selection"
+  },
+  "moved": {
+    "message": "Moved successfully"
+  },
+  "move": {
+    "message": "Move"
+  },
+  "copyLink": {
+    "message": "Copy Link"
+  },
+  "moveFailed": {
+    "message": "Move failed"
+  },
+  "confirmDeleteFolder": {
+    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  },
+  "uncategorized": {
+    "message": "Uncategorized"
   }
 }
